[gd_scene load_steps=2 format=3 uid="uid://ia1rgt3183n6"]

[ext_resource type="Script" path="res://FrontEnd/Scripts/Screen_GameOverMenu.gd" id="1_uxph4"]

[node name="ScreenGameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uxph4")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Button_Retry" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Tentar Novamente"

[node name="Button_MainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Menu Principal"

[node name="Button_Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button_Retry" to="." method="_on_button_retry_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button_MainMenu" to="." method="_on_button_main_menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
